@@ -47,6 +47,12 @@
           <control type="toggle"/>
         </setting>
 
+        <setting id="disable_recording_categories" type="boolean" label="30135" help="30530">
+          <level>0</level>
+          <default>false</default>
+          <control type="toggle"/>
+        </setting>
+
         <setting id="generate_repeat_indicators" type="boolean" label="30133" help="30528">
           <level>0</level>
           <default>false</default>
